0.2.8:
- Added pinch zoom;
- Added french translation;

0.2.7: First public release.